# hass-openllm-conversation

./: .gitignore  CLAUDE.md  LICENSE  README.md  hacs.json  pyproject.toml  requirements_test.txt
.github/workflows/: lint.yaml  release.yaml  tests.yaml  validate.yaml
custom_components/openllm_conversation/: __init__.py  ai_task.py  api.py  config_flow.py  const.py  conversation.py  manifest.json  strings.json
custom_components/openllm_conversation/translations/: en.json
tests/: __init__.py  conftest.py  test_api.py  test_config_flow.py
